--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -5,8 +5,14 @@ body  {
 p {
   text-indent: 50px;
   width: 75%;
+  background-color: #F2F3F4;
+  padding: .5em;
+  box-shadow: 5px 5px 5px black;
 }
 
+article  {
+  margin: 2em 0 2em 0;
+}
 h1  {
   text-decoration: underline;
 }
@@ -39,4 +45,11 @@ h1  {
 @media only screen and (max-width: 480px) {
 	.col {  margin: 1% 0 1% 0%; }
 	.span_3_of_3, .span_2_of_3, .span_1_of_3 { width: 100%; }
+}
+.submit  {
+  margin: 1vw auto 0 50%;
+  padding: .3em;
+}
+.submit:hover  {
+  color: blue;
 }
